repair collapsing behavior

--- a/src/main/webapp/content/scss/editor.scss
+++ b/src/main/webapp/content/scss/editor.scss
@@ -7,31 +7,6 @@ Code-Editor Layout Styles
     grid-template-rows: min-content auto auto;
     grid-row-gap: 10px;
 
-    .collapsed--horizontal,
-    .collapsed--vertical {
-        flex: none !important;
-
-        .card-header {
-            height: 100%;
-            width: 100%;
-            > fa-icon {
-                display: none;
-            }
-        }
-
-        .card-body,
-        .card-second-header {
-            display: none !important;
-        }
-
-        .card-title span {
-            display: none !important;
-        }
-
-        .card-footer span {
-            display: none !important;
-        }
-    }
     .collapsed--horizontal {
         width: 75px !important;
     }
@@ -141,6 +116,51 @@ jhi-code-editor-file-browser {
                 width: 60px;
             }
         }
+    }
+}
+
+.editor-sidebar-left.collapsed--horizontal jhi-code-editor-file-browser {
+    flex: none !important;
+
+    .card-header {
+        height: 100%;
+        width: 100%;
+        > fa-icon {
+            display: none;
+        }
+    }
+
+    .card-body,
+    .card-second-header {
+        display: none !important;
+    }
+
+    .card-title span {
+        display: none !important;
+    }
+}
+
+.editor-sidebar-left:not(.collapsed--horizontal) .code-editor-status {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(max-content, 1fr));
+    grid-column-gap: 10px;
+
+    > :not(:first-child) {
+        border-left: 1px solid rgba(0, 0, 0, 0.125);
+        padding-left: 20px;
+    }
+}
+
+.editor-sidebar-left.collapsed--horizontal .code-editor-status {
+    > :not(:last-child) {
+        padding-bottom: 5px;
+    }
+    > :not(:first-child) {
+        padding-top: 5px;
+        border-top: 1px solid rgba(0, 0, 0, 0.125);
+    }
+    span {
+        display: none !important;
     }
 }
 
@@ -261,6 +281,68 @@ jhi-code-editor-instructions {
     }
 }
 
+.editor-sidebar-right.collapsed--horizontal {
+    flex: none !important;
+
+    .card-header {
+        height: 100%;
+        width: 100%;
+        > fa-icon {
+            display: none;
+        }
+    }
+    .card-body {
+        .editable-instruction-container__save,
+        jhi-markdown-editor {
+            display: none;
+        }
+        .instructions__content {
+            height: auto;
+        }
+    }
+
+    .card-second-header {
+        display: none !important;
+    }
+
+    .card-title span {
+        display: none !important;
+    }
+}
+
+.editor-sidebar-right:not(.collapsed--horizontal) .editable-instruction-container__status {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(max-content, 1fr));
+    grid-column-gap: 10px;
+
+    > :not(:first-child) {
+        border-left: 1px solid rgba(0, 0, 0, 0.125);
+        padding-left: 20px;
+    }
+}
+
+.editor-sidebar-right.collapsed--horizontal .editable-instruction-container__status {
+    .editable-instruction-container__status {
+        > :not(:last-child) {
+            padding-bottom: 5px;
+        }
+
+        > :not(:first-child) {
+            padding-top: 5px;
+            border-top: 1px solid rgba(0, 0, 0, 0.125);
+        }
+
+        span {
+            display: none !important;
+        }
+    }
+
+    .editable-instruction-container__status__testcase span,
+    .instructions-status span {
+        display: none !important;
+    }
+}
+
 /*!* ==========================================================================
 Ace Editor
 ========================================================================== *!*/
@@ -277,86 +359,29 @@ Ace Editor
 }
 
 /*!* ==========================================================================
-Instructions stepwizard
-========================================================================== *!*/
-
-.stepwizard-step p {
-    margin-top: 10px;
-}
-
-.stepwizard-step .fa {
-    vertical-align: initial;
-}
-
-.stepwizard-row {
-    display: table-row;
-}
-
-.stepwizard {
-    display: table;
-    width: 100%;
-    position: relative;
-}
-
-.stepwizard-step button[disabled] {
-    opacity: 1 !important;
-    filter: alpha(opacity=100) !important;
-    cursor: default;
-}
-
-.stepwizard-step .btn {
-    cursor: default;
-}
-
-.stepwizard-row:before {
-    top: 14px;
-    bottom: 0;
-    position: absolute;
-    content: ' ';
-    width: 100%;
-    height: 1px;
-    background-color: #ccc;
-    z-order: 0;
-}
-
-.stepwizard-step {
-    display: table-cell;
-    text-align: center;
-    position: relative;
-
-    &--no-result.btn {
-        cursor: default;
-    }
-
-    &--failed.btn {
-        cursor: pointer;
-    }
-}
-
-.btn-circle.btn-circle {
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    padding: 6px 0;
-    font-size: 12px;
-    line-height: 1.428571429;
-    border-radius: 15px;
-    &.btn-light {
-        border-color: #ccc;
-    }
-}
-
-.test-passing {
-    cursor: default !important;
-}
-
-.test-passing:hover {
-    background-color: #f8f9fa;
-}
-
-/*!* ==========================================================================
 Build-output
 ========================================================================== *!*/
+
+.editor-bottom.collapsed--horizontal .build-output {
+    flex: none !important;
+
+    .card-header {
+        height: 100%;
+        width: 100%;
+        > fa-icon {
+            display: none;
+        }
+    }
+
+    .card-body,
+    .card-second-header {
+        display: none !important;
+    }
+
+    .card-title span {
+        display: none !important;
+    }
+}
 
 .build-output {
     height: inherit;
@@ -381,20 +406,5 @@ Build-output
                 color: #003366;
             }
         }
-    }
-}
-
-/*!* ==========================================================================
-Code-Editor-Status
-========================================================================== *!*/
-
-.code-editor-status {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(max-content, 1fr));
-    grid-column-gap: 10px;
-
-    > :not(:first-child) {
-        border-left: 1px solid rgba(0, 0, 0, 0.125);
-        padding-left: 20px;
     }
 }
